--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,9 @@
   </ion-header>
 
   <div id="container">
-   
+    <span id="layout">
+      <ng-container *ngComponentOutlet="viewDetails"></ng-container>
+     </span>
   </div>
   <div id="props">
     <ion-button expand='block'>
