--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,10 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+
+
+// @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+@import 'src/app/view-layout/view-layout.component.scss';
