--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,6 +18,12 @@
       <ng-container *ngComponentOutlet="viewDetails"></ng-container>
      </span>
   </div>
+
+
+
+
+
+  <!-- side panel.................................................................... -->
   <div id="props">
     <ion-button expand='block'>
       <!-- <ion-icon name="{{iconname}}"></ion-icon> -->
@@ -32,6 +38,12 @@
         </ion-item>
         <ion-item>
           <ion-icon (click)='select($event, "polygon")' name="create"></ion-icon>
+        </ion-item>
+
+        <ion-button expand='block'>Door</ion-button>
+        <ion-button expand='block'>Floor</ion-button>
+        <ion-item *ngFor='let f of floor'>
+          <img src="{{f.img}}" alt="">
         </ion-item>
       </div>
       <div class="dev-tool" *ngIf='props=="Device"'>
