--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,10 +13,11 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
+  <div id="container" style="padding:0% 0%">
     <span id="layout">
       <ng-container *ngComponentOutlet="viewDetails"></ng-container>
      </span>
+
   </div>
   <div id="props">
     <ion-button expand='block'>
@@ -32,7 +33,12 @@
         </ion-item>
         <ion-item>
           <ion-icon (click)='select($event, "polygon")' name="create"></ion-icon>
+          Draw Polygon with Line
         </ion-item>
+        <!-- <ion-item>
+          <ion-icon (click)='line($event, "polygon")' name="remove"></ion-icon>
+          Draw Polygon with Line
+        </ion-item> -->
       </div>
       <div class="dev-tool" *ngIf='props=="Device"'>
         <ion-item *ngFor='let dev of devices'>
