darg and drop devices and decorations

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -17,6 +17,10 @@ ion-content ion-toolbar {
 ion-title{
   text-align: center;
 }
+.mystyle{
+  width:6%;
+  height:6%;
+}
 #props{
   position: absolute;
   right: 0;
