--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,10 +13,11 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container" style="padding:0% 0%">
-    <span id="layout">
+  <div id="container" style="padding:0% 0%" (drop)="drop($event)" (dragover)="allowDrop($event)">
+    <div id="layout" >
+      <!-- <svg viewBox="0 10 1050 650"width="1050" height="650" style="border:1px solid black; margin-top:2%"></svg> -->
       <ng-container *ngComponentOutlet="viewDetails"></ng-container>
-     </span>
+    </div>
 
   </div>
 
@@ -54,12 +55,12 @@
       </div>
       <div class="dev-tool" *ngIf='props=="Device"'>
         <ion-item *ngFor='let dev of devices'>
-         <img src="{{dev.img}}" alt="">
+         <img src="{{dev.img}}"  alt="" draggable="true" (dragstart)="drag($event,dev.img)">
         </ion-item>
       </div>
       <div class="deco-tool" *ngIf='props=="Decorations"'>
         <ion-item *ngFor='let deco of decorations'>
-         <img src="{{deco.img}}" alt="">
+         <img src="{{deco.img}}"  alt="" draggable="true" (dragstart)="drag($event,deco.img)">
         </ion-item>
       </div>
   </div>
