--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,9 +14,10 @@
   </ion-header>
 
   <div id="container" style="padding:0% 0%">
-    <span id="layout">
-      <ng-container *ngComponentOutlet="viewDetails"></ng-container>
-     </span>
+    <svg id="house" height = '100%' width = '95%' xmlns="http://www.w3.org/2000/svg" style="border: 1px solid;" ></svg>
+    <!-- <div id="layout"> -->
+      <!-- <ng-container *ngComponentOutlet="viewDetails"></ng-container> -->
+    <!-- </div> -->
 
   </div>
 
