--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,59 @@
+// #container {
+//   text-align: center;
+//   border: 1px solid;
+//   position: absolute;
+//   left: 0;
+//   // right: 0;
+//   top: 60px;
+//   height: 100%;
+//   width: 80%;
+//   // transform: translateY(-50%);
+// }
+
+
+// ion-content ion-toolbar {
+//   --background: translucent;
+// }
+// ion-title{
+//   text-align: center;
+// }
+// .mystyle{
+//   width:6%;
+//   height:6%;
+// }
+// #props{
+//   position: absolute;
+//   right: 0;
+//   top: 60px;
+//   width: 20%;
+//   height: 100%;
+//   border: 1px solid;
+// }
+// // #props ion-button{
+// //   // color: white;
+// // }
+// ion-select{
+//   width: 100%;
+// }
+// .room-tool, .dev-tool, .deco-tool{
+//   height: 92%;
+//   overflow: scroll;
+// }
+// #props img{
+//   width: 100px;
+//   height: 100px;
+// }
+// #props ion-item{
+//   padding: 10px;
+// }
+
+
+
+// .room{
+//   border: 2px solid;
+//   height: 100px;
+//   width: 100px;
+// }
 #container {
   text-align: center;
   border: 1px solid;
