--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,54 +1,3 @@
-<!-- <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      SmartSketcher
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large" >Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-<<<<<<< HEAD
-  <div id="container" style="padding:0% 0%" (drop)="drop($event)" (dragover)="allowDrop($event)">
-    <div id="layout" >
-      <!-- <svg viewBox="0 10 1050 650"width="1050" height="650" style="border:1px solid black; margin-top:2%"></svg> -->
-      <!-- <ng-container *ngComponentOutlet="viewDetails"></ng-container>
-    </div>
-
-  </div>
-
-
-
-
-
-  <!-- side panel.................................................................... -->
-  <!-- <div id="props">
-    <ion-button expand='block'>
-      <!-- <ion-icon name="{{iconname}}"></ion-icon> -->
-      <!-- <ion-icon name="md-arrow-dropdown"></ion-icon> -->
-      <!-- <ion-select [(ngModel)]="props" (ionChange)='selectProps($event)' interface="popover" text-wrap> -->
-        <!-- <ion-select-option *ngFor="let props of properties" [value]="props">{{props}}</ion-select-option>
-      </ion-select>
-    </ion-button>
-      <div class="room-tool" *ngIf='props=="Room"'>
-        <ion-item>
-          <ion-icon (click)='select($event, "rectangle")' name="square-outline"></ion-icon>
-        </ion-item>
-        <ion-item>
-          <ion-icon (click)='select($event, "polygon")' name="create"></ion-icon>
-          Draw Polygon with Line
-        </ion-item> --> --> -->
-        <!-- <ion-item>
-          <ion-icon (click)='line($event, "polygon")' name="remove"></ion-icon>
-          Draw Polygon with Line
-        </ion-item> -->
-
-       
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
@@ -66,15 +15,9 @@
 
   <div id="container" style="padding:0% 0%" (dragover)="allowDrop($event)">
     <div id="layout" >
-      <!-- <svg viewBox="0 10 1050 650"width="1050" height="650" style="border:1px solid black; margin-top:2%"></svg> -->
       <ng-container *ngComponentOutlet="viewDetails"></ng-container>
     </div>
-<!-- <div id="container" style="padding:0% 0%">
-    <svg id="house" height = '100%' width = '95%' xmlns="http://www.w3.org/2000/svg" style="border: 1px solid;" >
-      <defs>
- </defs>
-    </svg>
-  </div> -->
+
   </div>
 <!-- side panel.................................................................... -->
   <div id="props">
@@ -90,6 +33,18 @@
         <ion-item>
           <ion-icon (click)='select($event, "polygon")' name="create"></ion-icon>
           Draw Polygon with Line
+        </ion-item>
+        <ion-item>
+          <ion-img (click)='select($event, "L_shape")' style="width:40%" src="assets/img/L_shape.png"></ion-img>
+          L shape Room 
+        </ion-item>
+        <ion-item>
+          <ion-img (click)='select($event, "U_shape")' style="width:40%" src="assets/img/U_shape.png"></ion-img>
+          U shape Room
+        </ion-item>
+        <ion-item>
+          <ion-img (click)='select($event, "T_shape")' style="width:40%" src="assets/img/T_shape.png"></ion-img>
+          T shape Room
         </ion-item>
         <ion-button expand='block'>Door</ion-button>
         <ion-button expand='block'>Floor</ion-button>
