--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,34 +3,45 @@
     <ion-title>
       SmartSketcher
     </ion-title>
+    <ion-button (click)='saveView()' color='success' style='position: absolute; right: 10px; top: 0; width: 270px;'><span>Done</span></ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large" >Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<div style="width: 100%; height: 100%; display: flex;">
+  <div id="container" style="padding:0% 0%">
+    <svg *ngIf='layout== false' id="house" height = '100%' width = '100%' xmlns="http://www.w3.org/2000/svg" style="border: 1px solid;" preserveAspectRatio="xMinYMin meet" version="1.1" viewBox='0 0 100 50'>
+      <defs>
 
-  <div id="container" style="padding:0% 0%" (dragover)="allowDrop($event)">
-    <div id="layout" >
-      <!-- <svg viewBox="0 10 1050 650"width="1050" height="650" style="border:1px solid black; margin-top:2%"></svg> -->
+      </defs>
+    </svg>
+    <!-- <span id="layout" >
       <ng-container *ngComponentOutlet="viewDetails"></ng-container>
-    </div>
-
+    </span> -->
+    
   </div>
-<!-- side panel.................................................................... -->
+
+
+
+
+
+  <!-- side panel.................................................................... -->
   <div id="props">
     <ion-button expand='block'>
+      <!-- <ion-icon name="{{iconname}}"></ion-icon> -->
+      <!-- <ion-icon name="md-arrow-dropdown"></ion-icon> -->
       <ion-select [(ngModel)]="props" (ionChange)='selectProps($event)' interface="popover" text-wrap>
         <ion-select-option *ngFor="let props of properties" [value]="props">{{props}}</ion-select-option>
       </ion-select>
     </ion-button>
       <div class="room-tool" *ngIf='props=="Room"'>
         <ion-item>
-          <ion-icon (click)='select($event, "rectangle")' name="square-outline"></ion-icon>
-          Square & Rectangle Room
+          <!-- <ion-button style="--background:transparent; color: gray; font-size: 20px; height: 40px;"> -->
+            <ion-icon (click)='select($event, "rectangle")' name="square-outline"></ion-icon>
+          <!-- </ion-button> -->
+          <ion-select [(ngModel)]="room_type" interface="popover" text-wrap style="margin-left: 100px; position: relative;">
+            <ion-select-option *ngFor="let type of roomtypes" [value]="type">{{type}}</ion-select-option>
+          </ion-select>
         </ion-item>
         <!-- <ion-item>
           <ion-icon (click)='select($event, "polygon")' name="create"></ion-icon>
@@ -48,7 +59,24 @@
           <ion-img (click)='select($event, "T_shape")' style="width:40%" src="assets/img/T_shape.png"></ion-img>
           T shape Room
         </ion-item>
+
+
+        <ion-item>
+          <ion-icon (click)='select($event, "polygon")' name="create"></ion-icon>
+          Draw Polygon with Line
+        </ion-item>
+        <!-- <ion-item>
+          <ion-icon (click)='line($event, "polygon")' name="remove"></ion-icon>
+          Draw Polygon with Line
+        </ion-item> -->
+
         <ion-button expand='block'>Door</ion-button>
+          <ion-item>
+            <img class="door" (click)='sel_door("slider")' src="assets/img/sliderDoor.png">
+          </ion-item>
+          <ion-item>
+            <img class="door" (click)='sel_door("door")' src="assets/img/door1.jpg">
+          </ion-item>
         <ion-button expand='block'>Floor</ion-button>
         <ion-item *ngFor='let f of floor'>
           <img class="floor" (mouseover)="drag($event, f)" src="{{f.img}}" alt="">
@@ -65,4 +93,7 @@
         </ion-item>
       </div>
   </div>
+</div>
 </ion-content>
+
+  
