--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -18,8 +18,8 @@ ion-title{
   text-align: center;
 }
 .mystyle{
-  // width:6%;
-  // height:6%;
+  width:6%;
+  height:6%;
 }
 #props{
   position: absolute;
