--- a/src/app/view-layout/view-layout.component.html
+++ b/src/app/view-layout/view-layout.component.html
@@ -1,4 +1,5 @@
 <!-- <p>view-layout works!</p> -->
+<div><ion-button (click)='user.homeClick()'><span>2D</span></ion-button></div>
 <div id="layoutView" #lv>
     <div class="page-room">
       <div id="home-layout" class="popout display-block">
