--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
 <ion-content [fullscreen]="true">
 <div style="width: 100%; height: 100%; display: flex;">
   <div id="container" style="padding:0% 0%">
-    <svg *ngIf='layout== false' id="house" (dragover)="allowDrop($event)" height = '100%' width = '100%' xmlns="http://www.w3.org/2000/svg" style="border: 1px solid;" preserveAspectRatio="xMinYMin meet" version="1.1" viewBox='0 0 100 50'>
+    <svg id="house" (dragover)="allowDrop($event)" height = '100%' width = '100%' xmlns="http://www.w3.org/2000/svg" style="border: 1px solid;" preserveAspectRatio="xMinYMin meet" version="1.1" viewBox='0 0 100 50'>
       <defs>
 
       </defs>
