--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
 <ion-content [fullscreen]="true">
 <div style="width: 100%; height: 100%; display: flex;">
   <div id="container" style="padding:0% 0%">
-    <svg *ngIf='layout== false' id="house" height = '100%' width = '100%' xmlns="http://www.w3.org/2000/svg" style="border: 1px solid;" preserveAspectRatio="xMinYMin meet" version="1.1" viewBox='0 0 100 50'>
+    <svg *ngIf='layout== false' id="house" height = '100%' width = '100%' xmlns="http://www.w3.org/2000/svg" style="border: 1px solid;" (dragover)="allowDrop($event)" preserveAspectRatio="xMinYMin meet" version="1.1" viewBox='0 0 100 50'>
       <defs>
 
       </defs>
@@ -84,12 +84,12 @@
       </div>
       <div class="dev-tool" *ngIf='props=="Device"'>
         <ion-item *ngFor='let dev of devices'>
-         <img class="device" src="{{dev.img}}"  alt="" draggable="true" (dragstart)="drag1($event,dev.img)">
+         <img class="device" src="{{dev.img}}"  alt="" draggable="true" (dragstart)="drag1($event,dev.img,dev.name,'dev')">
         </ion-item>
       </div>
       <div class="deco-tool" *ngIf='props=="Decorations"'>
         <ion-item *ngFor='let deco of decorations'>
-         <img class="deco" src="{{deco.img}}"  alt="" draggable="true" (dragstart)="drag1($event,deco.img)">
+         <img class="deco" src="{{deco.img}}"  alt="" draggable="true" (dragstart)="drag1($event,deco.img,deco.name,'deco')">
         </ion-item>
       </div>
   </div>
